Corrigindo alguns erros no cadastro de usuario e produto

--- a/Trembo_Store_PI/src/main/resources/static/cadastroUsuario.html
+++ b/Trembo_Store_PI/src/main/resources/static/cadastroUsuario.html
@@ -21,12 +21,12 @@
                 <input type="text" th:field="*{cpf}" name="cpf" required>
             </div>
             <div>
-                <label for="senha">Senha:</label>
-                <input type="password" th:field="*{senha}" name="senha" required>
+                <label for="password">Senha:</label>
+                <input type="password" th:field="*{password}" name="password" required>
             </div>
             <div>
-                <label for="senha">Confirmar Senha:</label>
-                <input type="password" th:field="*{confirmar-senha}" name="confirmar-senha" required>
+                <label for="#">Confirmar Senha:</label>
+                <input type="password" name="confirmar-senha" required>
             </div>
             <div>
                 <label for="cargo">Cargo:</label>
