Resolvendo problemas de incompatibilidade de banco de dados para produtos e clientes

--- a/Trembo_Store_PI/src/main/resources/static/PaginaInicio.html
+++ b/Trembo_Store_PI/src/main/resources/static/PaginaInicio.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-        <h1 class="text-center-my-4">Bem vindo(a) a Trembo Soter</h1> <!--A ideia e colocar nesta pagina o nome do admin-->
+        <h1 class="text-center-my-4">Bem vindo(a) a Trembo Store</h1> <!--A ideia e colocar nesta pagina o nome do admin-->
 
         <a class="btn btn-primary" href="/cadastrarProduto.html">Cadastrar Produtos</a>
     </div>
