--- a/Trembo_Store_PI/src/main/resources/static/cadastrarProduto.html
+++ b/Trembo_Store_PI/src/main/resources/static/cadastrarProduto.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h2>Cadastrar Produto</h2>
-    <form action="produto/cadastro" method="POST" enctype="multipart/form-data">
+    <form action="produto/cadastroProduto" method="POST" enctype="multipart/form-data">
     <div>
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
