--- a/Trembo_Store_PI/src/main/resources/static/loginfuncionario.html
+++ b/Trembo_Store_PI/src/main/resources/static/loginfuncionario.html
@@ -8,19 +8,15 @@
   </head>
   <body>
     <div>
-        <h1 class="text-center-my-4">Login</h1>
-
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" required>
-        </div>
-        <button class="btn btn-primary" type="submit">Logar</button>
+      <h2>Login</h2>
+      <form action="login/logar" method="post">
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email" required><br>
+          <label for="password">Password:</label><br>
+          <input type="password" id="password" name="password" required><br><br>
+          <button type="submit" class="btn btn-primary">Login</button>
+      </form>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
