--- a/Trembo_Store_PI/src/main/resources/static/cadastrarProduto.html
+++ b/Trembo_Store_PI/src/main/resources/static/cadastrarProduto.html
@@ -1,43 +1,43 @@
 <!doctype html>
-<html lang="pt-br">
-  <head>
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cadastro de produtos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h2>Cadastrar Produto</h2>
-    <form action="produto/cadastroProduto" method="POST" enctype="multipart/form-data">
+</head>
+<body>
+<h2>Cadastrar Produto</h2>
+<form th:action="@{/produto/cadastroProduto}" method="POST" enctype="multipart/form-data" th:object="${produto}">
     <div>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required>
+        <input type="text" id="nome" th:field="*{nome}" required>
     </div>
     <br>
     <div>
         <label for="categoria">Categoria:</label>
-        <input type="text" id="categoria" name="categoria" required>
+        <input type="text" id="categoria" th:field="*{categoria}" required>
     </div>
     <br>
     <div>
         <label for="preco">Preço:</label>
-        <input type="number" id="preco" name="preco" required>
+        <input type="number" id="preco" th:field="*{preco}" required>
     </div>
     <br>
     <div>
         <label for="marca">Marca:</label>
-        <input type="text" id="marca" name="marca" required>
+        <input type="text" id="marca" th:field="*{marca}" required>
     </div>
     <br>
     <div>
         <label for="descricao">Descrição:</label>
-        <input type="text" id="descricao" name="descricao" required>
+        <input type="text" id="descricao" th:field="*{descricao}" required>
     </div>
     <br>
     <div>
-        <label class = "picture" tabindex="0">
-            <input type ="file" accept = "image/" id="picture__input" />    
-            <span class = "picture__image">Selecione a imagem</span>
+        <label class="picture" tabindex="0">
+            <input type="file" accept="image/*" id="picture__input" name="file">
+            <span class="picture__image">Selecione a imagem</span>
         </label>
     </div>
     <br>
@@ -46,9 +46,7 @@
         <a class="btn btn-primary" href="/PaginaInicio.html">Voltar</a>
     </div>
 </form>
-    
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
