--- a/Trembo_Store_PI/src/main/resources/static/cadastroCliente.html
+++ b/Trembo_Store_PI/src/main/resources/static/cadastroCliente.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro usuario</title>
+    <title>Cadastro de Usuário</title>
 </head>
 <body>
-        <h2>Cadastro de Usuário</h2>
-        <form th:object=${dados} action="cliente/cadastroCli" method="POST" >
-            <div>
-                <label for="nome">Nome:</label>
-                <input type="text" th:field="*{nome}" name="nome" required>
-            </div>
-            <div>
-                <label for="Sobrenome">Sobrenome:</label>
-                <input type="text" th:field="*{sobrenome}" name="sobrenome" required>
-            </div>
-            <div>
-                <label for="email_cli">E-mail:</label>
-                <input type="email" th:field="*{email_cli}" name="email_cli" required>
-            </div>
-            <div>
-                <label for="cpf">CPF:</label>
-                <input type="text" th:field="*{cpf}" name="cpf" required>
-            </div>
-            <div>
-                <label for="data_nascimento">Data de Nascimento:</label>
-                <input type="date" th:field="*{data_nascimento}" name="data_nascimento" required>
-            </div>
-            <div>
-                <label for="password">Senha:</label>
-                <input type="password" th:field="*{password}" name="password" required>
-            </div>
-
-            <div>
-                <label for="genero">Genero: </label>
-                <input type="text" th:field="*{gerero}" name="genero" required>
-            </div>
-            <br>
-            <div>
-                <button type="submit">Cadastrar</button>
-            </div>
-        </form>
+<h2>Cadastro de Usuário</h2>
+<form th:action="@{/cliente/cadastroCli}" th:object="${dados}" method="POST">
+    <div>
+        <label for="nome">Nome:</label>
+        <input type="text" th:field="*{nome}" id="nome" name="nome" required>
+    </div>
+    <div>
+        <label for="sobrenome">Sobrenome:</label>
+        <input type="text" th:field="*{sobrenome}" id="sobrenome" name="sobrenome" required>
+    </div>
+    <div>
+        <label for="email_cli">E-mail:</label>
+        <input type="email" th:field="*{email_cli}" id="email_cli" name="email_cli" required>
+    </div>
+    <div>
+        <label for="cpf">CPF:</label>
+        <input type="text" th:field="*{cpf}" id="cpf" name="cpf" required>
+    </div>
+    <div>
+        <label for="data_nascimento">Data de Nascimento:</label>
+        <input type="date" th:field="*{data_nascimento}" id="data_nascimento" name="data_nascimento" required>
+    </div>
+    <div>
+        <label for="password">Senha:</label>
+        <input type="password" th:field="*{password}" id="password" name="password" required>
+    </div>
+    <div>
+        <label for="genero">Gênero:</label>
+        <input type="text" th:field="*{genero}" id="genero" name="genero" required>
+    </div>
+    <br>
+    <div>
+        <button type="submit">Cadastrar</button>
+    </div>
+</form>
 </body>
 </html>
