--- a/Trembo_Store_PI/src/main/resources/static/listaUsuarios.html
+++ b/Trembo_Store_PI/src/main/resources/static/listaUsuarios.html
@@ -25,9 +25,9 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="usuario : ${usuarios}">
+            <tr th:each="usuario:${usuarios}">
                 <td th:text="${usuario.id}"></td>
-                <td tH:text="${usuario.nome}"></td>
+                <td th:text="${usuario.nome}"></td>
                 <td th:text="${usuario.email}"></td>
                 <td th:text="${usuario.cargo}"></td>
                 <td th:text="${usuario.create.tooString().substring(0,10 )}"></td>
