--- a/Trembo_Store_PI/src/main/resources/static/cadastroUsuario.html
+++ b/Trembo_Store_PI/src/main/resources/static/cadastroUsuario.html
@@ -3,41 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="#.css">
     <title>Cadastro usuario</title>
 </head>
 <body>
         <h2>Cadastro de Usuário</h2>
-        <form th:object=${dados} action="usuario/cadastro" method="POST" >
-            <div>
-                <label for="nome">Nome:</label>
-                <input type="text" th:field="*{nome}" name="nome" required>
-            </div>
-            <div>
-                <label for="email">E-mail:</label>
-                <input type="email" th:field="*{email}" name="email" required>
-            </div>
-            <div>
-                <label for="cpf">CPF:</label>
-                <input type="text" th:field="*{cpf}" name="cpf" required>
-            </div>
-            <div>
-                <label for="password">Senha:</label>
-                <input type="password" th:field="*{password}" name="password" required>
-            </div>
-            <div>
-                <label for="#">Confirmar Senha:</label>
-                <input type="password" name="confirmar-senha" required>
-            </div>
-            <div>
-                <label for="CargoUsuario">Cargo:</label>
-                    <select id="CargoUsuario" name="cargo" required>
-                        <option value="1">Administrador</option>
-                        <option value="2">Estoquista</option>
-                    </select>
-            </div>
-            <div>
-                <button type="submit">Cadastrar</button>
-            </div>
+        <form action="/api/usuarios" method="post">
+
+            <label for="nome">Nome:</label><br>
+            <input type="text" id="nome" name="nome">
+            <br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email">
+            <br>
+
+            <label for="cpf">CPF:</label><br>
+            <input type="text" id="cpf" name="cpf"><br>
+
+            <label for="senha">Senha:</label><br>
+            <input type="password" id="senha" name="senha"><br>
+
+            <label for="confirmarSenha">Confirmar Senha:</label><br>
+            <input type="password" id="confirmarSenha" name="confirmarSenha"><br>
+
+            <label for="cargo">Cargo:</label><br>
+            <select id="cargo" name="cargo">
+                <option value="Administrador">Admin</option>
+                <option value="Estoquista">Estoquista</option>
+            </select><br>
+
+            <input type="hidden" id="status" name="status" value="ativo">
+            <input type="submit" value="Submit">
         </form>
+        <script src="CadastroUsuario.js"></script>
 </body>
 </html>
