--- a/Trembo_Store_PI/src/main/resources/static/listaUsuarios.html
+++ b/Trembo_Store_PI/src/main/resources/static/listaUsuarios.html
@@ -44,7 +44,34 @@
 
 
   </div>
+    <script>
+        function filterTable() {
+            const searchInput = document.getElementById('searchInput');
+            const filter = searchInput.value.toLowerCase();
+            const rows = document.querySelectorAll('#userTableBody tr');
 
+            rows.forEach(row => {
+                const cells = row.getElementsByTagName('td');
+                let matches = false;
+                for (let i = 0; i < cells.length; i++) {
+                    if (cells[i] && cells[i].textContent.toLowerCase().indexOf(filter) > -1) {
+                        matches = true;
+                        break;
+                    }
+                }
+                if (matches) {
+                    row.style.display = '';
+                } else {
+                    row.style.display = 'none';
+                }
+            });
+        }
+
+        function alterarStatus(id) {
+            // Logic to alter status
+            window.location.href = 'alterarStatusUsuario.html?id=' + id;
+        }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
